--- a/custom_components/mass/frontend/locales/en.json
+++ b/custom_components/mass/frontend/locales/en.json
@@ -46,8 +46,8 @@
   "add_queue": "Add to Queue",
   "queue_clear": "Clear queue",
   "show_info": "Show info",
-  "queue_next_tracks": "Next",
-  "queue_previous_tracks": "Played",
+  "queue_next_items": "Next items",
+  "queue_previous_items": "Played items",
   "queue_move_up": "Move up",
   "queue_move_down": "Move down",
   "queue_options": "Queue options",
@@ -57,7 +57,12 @@
   "disable_shuffle": "Disable shuffle",
   "read_more": "read more",
   "stream_details": "Streamdetails",
+  "shuffle_enabled": "Shuffle enabled",
+  "repeat_enabled": "Repeat enabled",
+  "volume_normalization_enabled": "Volume normalization enabled",
+  "volume_normalization_target": "Volume normalization target",
   "crossfade_enabled": "Crossfade enabled",
+  "crossfade_duration": "Crossfade duration (0-10 seconds)",
   "state": {
     "playing": "playing",
     "idle": "idle",
