--- a/custom_components/mass/frontend/locales/nl.json
+++ b/custom_components/mass/frontend/locales/nl.json
@@ -46,8 +46,8 @@
   "add_queue": "Voeg toe aan wachtrij",
   "queue_clear": "Wachtrij leegmaken",
   "show_info": "Bekijk informatie",
-  "queue_next_tracks": "Aankomend",
-  "queue_previous_tracks": "Afgespeeld",
+  "queue_next_items": "Aankomende items",
+  "queue_previous_items": "Reeds afgespeelde items",
   "queue_move_up": "Verplaats omhoog",
   "queue_move_down": "Verplaats omlaag",
   "queue_options": "Wachtrij opties",
@@ -57,7 +57,12 @@
   "disable_shuffle": "Shuffle uitschakelen",
   "read_more": "meer lezen",
   "stream_details": "Streamdetails",
+  "shuffle_enabled": "Shuffle ingeschakeld",
+  "repeat_enabled": "Repeat ingeschakeld",
+  "volume_normalization_enabled": "Volume normalisatie ingeschakeld",
+  "volume_normalization_target": "Volume normalizatisatie doelvolume",
   "crossfade_enabled": "Crossfade ingeschakeld",
+  "crossfade_duration": "Crossfade duur (0-10 seconds)",
   "state": {
     "playing": "afspelen",
     "idle": "gestopt",
