--- a/custom_components/mass/frontend/locales/en.json
+++ b/custom_components/mass/frontend/locales/en.json
@@ -44,31 +44,40 @@
   "play_now": "Play Now",
   "play_next": "Play Next",
   "add_queue": "Add to Queue",
-  "queue_clear": "Clear queue",
+  "queue_clear": "Clear all items in queue",
   "show_info": "Show info",
   "queue_next_items": "Next items",
   "queue_previous_items": "Played items",
   "queue_move_up": "Move up",
   "queue_move_down": "Move down",
   "queue_options": "Queue options",
-  "enable_repeat": "Enable repeat",
-  "disable_repeat": "Disable repeat",
-  "enable_shuffle": "Enable shuffle",
-  "disable_shuffle": "Disable shuffle",
   "read_more": "read more",
   "stream_details": "Streamdetails",
-  "shuffle_enabled": "Shuffle enabled",
-  "repeat_enabled": "Repeat enabled",
-  "volume_normalization_enabled": "Volume normalization enabled",
-  "volume_normalization_target": "Volume normalization target",
-  "crossfade_enabled": "Crossfade enabled",
-  "crossfade_duration": "Crossfade duration (0-10 seconds)",
+  "shuffle": "Shuffle",
+  "repeat": "Repeat",
+  "volume_normalization": "Volume normalization",
+  "volume_normalization_target": "{0} LUFS",
+  "crossfade": "Crossfade",
+  "crossfade_duration": "{0} seconds",
   "state": {
     "playing": "playing",
     "idle": "idle",
     "paused": "paused",
     "off": "off"
   },
+  "repeatmode": {
+    "off": "Repeat off",
+    "one": "Repeat single track",
+    "all": "Repeat entire queue"
+  },
+  "crossfademode": {
+    "disabled": "Crossfade disabled",
+    "strict": "Strict: Do not crossfade tracks of same album or different sample rate",
+    "smart": "Smart: Crossfade tracks when possible without resampling",
+    "always": "Crossfade all tracks (resamples all audio to fixed rate)"
+  },
+  "on": "On",
+  "off": "Off",
   "dark_mode": "Dark mode",
   "jobs": "Background jobs",
   "jobs_running": "There are {0} background jobs running.",
