--- a/custom_components/mass/frontend/locales/nl.json
+++ b/custom_components/mass/frontend/locales/nl.json
@@ -51,24 +51,33 @@
   "queue_move_up": "Verplaats omhoog",
   "queue_move_down": "Verplaats omlaag",
   "queue_options": "Wachtrij opties",
-  "enable_repeat": "Repeat inschakelen",
-  "disable_repeat": "Repeat uitschakelen",
-  "enable_shuffle": "Shuffle inschakelen",
-  "disable_shuffle": "Shuffle uitschakelen",
   "read_more": "meer lezen",
   "stream_details": "Streamdetails",
-  "shuffle_enabled": "Shuffle ingeschakeld",
-  "repeat_enabled": "Repeat ingeschakeld",
-  "volume_normalization_enabled": "Volume normalisatie ingeschakeld",
-  "volume_normalization_target": "Volume normalizatisatie doelvolume",
-  "crossfade_enabled": "Crossfade ingeschakeld",
-  "crossfade_duration": "Crossfade duur (0-10 seconds)",
+  "shuffle": "Shuffle",
+  "repeat": "Repeat",
+  "volume_normalization": "Volume normalisatie",
+  "volume_normalization_target": "{0} LUFS",
+  "crossfade": "Crossfade modus",
+  "crossfade_duration": "{0} seconden",
   "state": {
     "playing": "afspelen",
     "idle": "gestopt",
     "paused": "gepauzeerd",
     "off": "uitgeschakeld"
   },
+  "repeatmode": {
+    "off": "Herhalen uitgeschakeld",
+    "one": "Herhaal enkel nummer",
+    "all": "Herhaal gehele afspeellijst"
+  },
+  "crossfademode": {
+    "disabled": "Crossfade uitschakelen",
+    "strict": "Strikt: Alleen indien liedjes van verschillend album en zelfde sample rate",
+    "smart": "Slim/automatisch: Crossfade indien mogelijk zonder kwaliteitsverlies",
+    "always": "Crossfade geforceerd inschakelen (past gefixeerde sample rate toe)"
+  },
+  "on": "Aan",
+  "off": "Uit",
   "dark_mode": "Donkere Modus",
   "jobs": "Achtergrondtaken",
   "jobs_running": "Er zijn {0} achtergrondtaken actief.",
