Fix various UI glitches (#68)
* speedup queue items listing

* Fix several UI glitches

--- a/custom_components/mass/frontend/locales/en.json
+++ b/custom_components/mass/frontend/locales/en.json
@@ -73,7 +73,7 @@
   "crossfademode": {
     "disabled": "Crossfade disabled",
     "strict": "Strict: Do not crossfade tracks of same album or different sample rate",
-    "smart": "Smart: Crossfade tracks when possible without resampling",
+    "smart": "Smart: Crossfade tracks when possible (without downsampling)",
     "always": "Crossfade all tracks (resamples all audio to fixed rate)"
   },
   "on": "On",
