Update hu.json (#106)

--- a/custom_components/mass/translations/hu.json
+++ b/custom_components/mass/translations/hu.json
@@ -6,13 +6,13 @@
         "description": "Kérem, állítsa be mely zenei szolgáltatásokat kívánja igébyne venni. A hozzáférési adatokat az alábbiakban adhatja meg.",
         "data": {
           "spotify_enabled": "Spotify szolgáltatás",
-          "spotify_username": "Felhasználónév",
-          "spotify_password": "Jelszó",
+          "spotify_username": "Spotify felhasználónév",
+          "spotify_password": "Spotify jlszó",
           "qobuz_enabled": "Qobuz szolgáltatás",
-          "qobuz_username": "Felhasználónév",
-          "qobuz_password": "Jelszó",
+          "qobuz_username": "Qobuz felhasználónév",
+          "qobuz_password": "Qobuz jelszó",
           "tunein_enabled": "Tune-In Rádió szolgáltatás",
-          "tunein_username": "Felhasználónév",
+          "tunein_username": "Tune-In felhasználónév",
           "filesystem_enabled": "Saját fájlrendszer szolgáltatás",
           "filesystem_directory": "Mappa a zenefájlokkal",
           "playlists_directory": "Mappa az m3u playlistekkel (opcionális)."
@@ -36,16 +36,16 @@
       },
       "music": {
         "title": "Music Assistant beállítása",
-        "description": "Configure which music providers you want to enable. For each enabled music provider, enter your credentials below.",
+        "description": "Kérem, állítsa be mely zenei szolgáltatásokat kívánja igébyne venni. A hozzáférési adatokat az alábbiakban adhatja meg.",
         "data": {
           "spotify_enabled": "Spotify szolgáltatás",
-          "spotify_username": "Felhasználónév",
-          "spotify_password": "Jelszó",
+          "spotify_username": "Spotify felhasználónév",
+          "spotify_password": "Spotify jlszó",
           "qobuz_enabled": "Qobuz szolgáltatás",
-          "qobuz_username": "Felhasználónév",
-          "qobuz_password": "Jelszó",
+          "qobuz_username": "Qobuz felhasználónév",
+          "qobuz_password": "Qobuz jelszó",
           "tunein_enabled": "Tune-In Rádió szolgáltatás",
-          "tunein_username": "Felhasználónév",
+          "tunein_username": "Tune-In felhasználónév",
           "filesystem_enabled": "Saját fájlrendszer szolgáltatás",
           "filesystem_directory": "Mappa a zenefájlokkal",
           "playlists_directory": "Mappa az m3u playlistekkel (opcionális)."
