Several small UI improvements (#217)
* grey out current item in queue listing

* Add delete item in queue

* Fix playlist commands of slimproto players

--- a/custom_components/mass/translations/frontend/en.json
+++ b/custom_components/mass/translations/frontend/en.json
@@ -50,6 +50,7 @@
   "queue_previous_items": "Played items",
   "queue_move_up": "Move up",
   "queue_move_down": "Move down",
+  "queue_delete": "Delete item",
   "queue_options": "Queue options",
   "read_more": "read more",
   "stream_details": "Streamdetails",
@@ -59,6 +60,7 @@
   "volume_normalization_target": "{0} LUFS",
   "crossfade": "Crossfade",
   "crossfade_duration": "{0} seconds",
+  "crossfade_enabled": "Crossfade is enabled",
   "state": {
     "playing": "playing",
     "idle": "idle",
