--- a/custom_components/mass/translations/frontend/nl.json
+++ b/custom_components/mass/translations/frontend/nl.json
@@ -16,6 +16,7 @@
   "settings": "Instellingen",
   "queue": "Wachtrij",
   "tasks": "Taken",
+  "sync": "Synchroniseren",
   "artist_toptracks": "Top nummers",
   "artist_albums": "Albums",
   "album_tracks": "Album liedjes",
