Implement server-side paging and browse feature basics (#597)
hide search for now

--- a/custom_components/mass/translations/frontend/en.json
+++ b/custom_components/mass/translations/frontend/en.json
@@ -12,6 +12,7 @@
   "playlist": "Playlist",
   "playlist_tracks": "Playlist tracks",
   "radios": "Radio",
+  "browse": "Browse",
   "search": "Search",
   "settings": "Settings",
   "queue": "Queue",
@@ -29,13 +30,6 @@
   "remove_playlist": "Remove from playlist",
   "no_player": "No player selected",
   "reboot_required": "A reboot is required to activate the new settings!",
-  "sort_name": "Sort by name",
-  "sort_artist": "Sort by artist name",
-  "sort_album": "Sort by album name",
-  "sort_date": "Sort by date",
-  "sort_position": "Sort by position",
-  "sort_track_number": "Sort by track number",
-  "sort_default": "Default sorting",
   "refresh_item": "Refresh item",
   "items_total": "{0} total item(s)",
   "items_selected": "{0} item(s) selected",
@@ -79,6 +73,17 @@
     "strict": "Strict: Do not crossfade tracks of same album or different sample rate",
     "smart": "Smart: Crossfade tracks when possible (without downsampling)",
     "always": "Crossfade all tracks (resamples all audio to fixed rate)"
+  },
+  "sort": {
+    "sort_name": "Alfabetically",
+    "sort_name DESC": "Alfabetically (descending)",
+    "sort_artist": "Artist",
+    "sort_album": "Album",
+    "year": "Release year",
+    "position": "Position",
+    "track_number": "Track number",
+    "timestamp DESC": "Recently added",
+    "duration": "Duration"
   },
   "on": "On",
   "off": "Off",
