Add youtube to config flow

--- a/custom_components/mass/translations/frontend/en.json
+++ b/custom_components/mass/translations/frontend/en.json
@@ -99,6 +99,7 @@
     "spotify": "Spotify",
     "qobuz": "Qobuz",
     "file": "Filesystem",
-    "tunein": "Tune-in"
+    "tunein": "Tune-in",
+    "ytmusic": "Youtube Music"
   }
 }
