--- a/custom_components/mass/translations/pl.json
+++ b/custom_components/mass/translations/pl.json
@@ -28,14 +28,14 @@
         },
         "data_description": {
           "filesystem_directory": "Podaj pełną ścieżkę do katalog na dysku z muzyką (np. /media). Pamiętaj że Home Assistant musi mieć dostęp do tego katalogu."
-          "yt_no_cookie": "Youtube Music wymaga podania ciągu autoryzacji z cookie zamiast hasła, więcej na: https://github.com/music-assistant/hass-music-assistant/discussions/606"
         }
       }
     },
     "error": {
-      "directory_not_exists": "Katalog nie istnieje albo nie ma do niego dostępu."
+      "directory_not_exists": "Katalog nie istnieje albo nie ma do niego dostępu.",
+      "yt_no_cookie": "Youtube Music wymaga podania ciągu autoryzacji z cookie zamiast hasła, więcej na: https://github.com/music-assistant/hass-music-assistant/discussions/606"
     }
-  },
+  },        
   "options": {
     "step": {
       "init": {
