--- a/custom_components/mass/translations/frontend/en.json
+++ b/custom_components/mass/translations/frontend/en.json
@@ -15,9 +15,12 @@
   "browse": "Browse",
   "search": "Search",
   "settings": "Settings",
+  "basic_settings": "Basic settings",
+  "advanced_settings": "Advanced settings",
   "queue": "Queue",
   "tasks": "Tasks",
   "sync": "Run sync",
+  "sync_full": "Force full sync",
   "artist_toptracks": "Top tracks",
   "artist_albums": "Albums",
   "album_tracks": "Album tracks",
@@ -34,12 +37,14 @@
   "items_total": "{0} total item(s)",
   "items_selected": "{0} item(s) selected",
   "clear_selection": "Clear selection",
+  "delete_db": "Delete item from database",
   "players": "Players",
   "play": "Play",
-  "play_on": "Play on:",
+  "play_on": "Play on: {0}",
   "play_now": "Play Now",
   "play_next": "Play Next",
   "add_queue": "Add to Queue",
+  "start_radio": "Start Radio",
   "queue_clear": "Clear all items in queue",
   "show_info": "Show info",
   "queue_next_items": "Next items",
@@ -57,6 +62,9 @@
   "crossfade": "Crossfade",
   "crossfade_duration": "{0} seconds",
   "crossfade_enabled": "Crossfade is enabled",
+  "stream_type": "Codec/type to use for the audio stream to the player",
+  "announce_volume_increase": "Relative volume increase for announcements",
+  "max_sample_rate": "Maximum sample rate to send to the player",
   "state": {
     "playing": "playing",
     "idle": "idle",
@@ -94,12 +102,35 @@
   "no_content": "No items found.",
   "no_content_filter": "No items found for the current filter/search conditions.",
   "details": "Details",
-  "explicit": "Explicit",
   "providers": {
     "spotify": "Spotify",
     "qobuz": "Qobuz",
     "file": "Filesystem",
     "tunein": "Tune-in",
     "ytmusic": "Youtube Music"
-  }
+  },
+  
+  "goto_artist": "Goto artist {0}",
+  "goto_album": "Goto album {0}",
+  "show_select_boxes": "Show selection boxes",
+  "perform_action": "Perform action on {0} item(s)",
+  "album_type": {
+    "unknown": "Unknown album type",
+    "album": "Album",
+    "single": "Single",
+    "compilation": "Compilation",
+    "ep": "EP"
+  },
+  "tooltip": {
+    "explicit": "Explicit",
+    "library": "Toggle in-library/favorite",
+    "filter_library": "Toggle in-library/favorite filter",
+    "sort_options": "Sort options",
+    "toggle_view_mode": "Toggle view mode list/thumbs",
+    "search": "Show/hide search input",
+    "refresh": "Refresh the items listing",
+    "refresh_new_content": "New content is available, click to refresh the listing",
+    "select_items": "Select multiple items"
+  },
+  "create_playlist": "Create new playlist on {0}"
 }
