A few small fixes (#705)
* Fix German and Polish translations in the frontend

* use base implementation for non-mass url's

* fix browse MA resources from HA browser

* add small indicator to view which items are linked

* default to mp3 stream for grouped player if flac not supported by childs

* Implement (possible) fix for playback on Volumio

* Implement global search

* fix typos

--- a/custom_components/mass/translations/frontend/en.json
+++ b/custom_components/mass/translations/frontend/en.json
@@ -14,6 +14,8 @@
   "radios": "Radio",
   "browse": "Browse",
   "search": "Search",
+  "try_global_search": "Try global search",
+  "topresult": "Top result",
   "settings": "Settings",
   "basic_settings": "Basic settings",
   "advanced_settings": "Advanced settings",
@@ -138,7 +140,9 @@
     "search": "Show/hide search input",
     "refresh": "Refresh the items listing",
     "refresh_new_content": "New content is available, click to refresh the listing",
-    "select_items": "Select multiple items"
+    "select_items": "Select multiple items",
+    "linked": "This provideritem is linked to the current itemdetails",
+    "album_artist_filter": "Toggle album-artist filter"
   },
   "create_playlist": "Create new playlist on {0}"
 }
