--- a/custom_components/mass/translations/frontend/pl.json
+++ b/custom_components/mass/translations/frontend/pl.json
@@ -1,99 +1,148 @@
 {
-  "mass": "Music Assistant",
-  "library": "Biblioteka",
-  "home": "Start",
-  "artists": "Artyści",
-  "albums": "Albumy",
-  "tracks": "Utwory",
-  "playlists": "Playlisty",
-  "artist": "Artysta",
-  "album": "Album",
-  "track": "Utwór",
-  "playlist": "Playlista",
-  "playlist_tracks": "Playlist tracks",
-  "radios": "Radio",
-  "search": "Szukaj",
-  "settings": "Ustawienia",
-  "queue": "Kolejka",
-  "tasks": "Zadanie",
-  "sync": "Synchronizuj",
-  "artist_toptracks": "Główne utwory",
-  "artist_albums": "Albumy",
-  "album_tracks": "Utwory z albumu",
-  "album_versions": "Wersje",
-  "track_versions": "Wersje",
-  "type_to_search": "Wpisz aby wyszukać...",
-  "add_library": "Dodaj do biblioteki",
-  "remove_library": "Usuń z biblioteki",
-  "add_playlist": "Dodaj do playlisty...",
-  "remove_playlist": "Usuń z playlisty",
-  "no_player": "Nie wybrano odtwarzacza",
-  "reboot_required": "Restart jest wymagany aby aktywować nowe ustawienia!",
-  "sort_name": "Sortuj po tytule",
-  "sort_artist": "Sortuj po artystach",
-  "sort_album": "Sortuj po albumach",
-  "sort_date": "Sortuj po dacie",
-  "sort_position": "Sortuj po pozycji",
-  "sort_track_number": "Sortuj po numerze utworu",
-  "sort_default": "Domyślne sortowanie",
-  "refresh_item": "Odśwież",
-  "items_total": "{0} łacznie pozycji",
-  "items_selected": "{0} wybranych pozycji",
-  "clear_selection": "Usuń zaznaczenie",
-  "players": "Odtwarzacze",
-  "play": "Graj",
-  "play_on": "Odtwara na: {0}",
-  "play_now": "Odtwarzaj teraz",
-  "play_next": "Odtwarzaj później",
-  "add_queue": "Dodaj do kolejki",
-  "queue_clear": "Usuń wszystko z kolejki",
-  "show_info": "Pokaż informacje",
-  "queue_next_items": "Kolejna pozycja",
-  "queue_previous_items": "Odtwarzane utwory",
-  "queue_move_up": "Przesuń do góry",
-  "queue_move_down": "Przesuń na dół",
-  "queue_delete": "Usuń pozycje",
-  "queue_options": "Opcje kolejki",
-  "read_more": "czytaj więcej",
-  "stream_details": "Szczegóły przesyłu",
-  "shuffle": "Losowo",
-  "repeat": "Powtarzaj",
-  "volume_normalization": "Normalizacja głośności",
-  "volume_normalization_target": "{0} LUFS",
-  "crossfade": "Crossfade",
-  "crossfade_duration": "{0} sekund",
-  "crossfade_enabled": "Crossfade aktywny",
-  "state": {
-    "playing": "playing",
-    "idle": "idle",
-    "paused": "paused",
-    "off": "off"
+    "mass": "Music Assistant",
+    "library": "Biblioteka",
+    "home": "Start",
+    "artists": "Artyści",
+    "albums": "Albumy",
+    "tracks": "Utwory",
+    "playlists": "Playlisty",
+    "artist": "Artysta",
+    "album": "Album",
+    "track": "Utwór",
+    "playlist": "Playlista",
+    "playlist_tracks": "Utwory playlisty",
+    "radios": "Radio",
+    "browse": "Przeglądaj",
+    "search": "Szukaj",
+    "try_global_search": "Wyszukaj globalnie",
+    "topresult": "Główne rezultaty",
+    "settings": "Ustawienia",
+    "basic_settings": "Ustawienia podstawowe",
+    "advanced_settings": "Ustawienia zaawansowane",
+    "queue": "Kolejka",
+    "tasks": "Zadanie",
+    "sync": "Synchronizuj",
+    "sync_full": "Wymuś pełną synchronizację",
+    "artist_toptracks": "Główne utwory",
+    "artist_albums": "Albumy",
+    "album_tracks": "Utwory z albumu",
+    "album_versions": "Wersje",
+    "track_versions": "Wersje i powiązania",
+    "type_to_search": "Wpisz aby wyszukać...",
+    "add_library": "Dodaj do biblioteki",
+    "remove_library": "Usuń z biblioteki",
+    "add_playlist": "Dodaj do playlisty...",
+    "remove_playlist": "Usuń z playlisty",
+    "no_player": "Nie wybrano odtwarzacza",
+    "reboot_required": "Restart jest wymagany aby aktywować nowe ustawienia!",
+    "refresh_item": "Odśwież",
+    "items_total": "{0} łacznie pozycji",
+    "items_selected": "{0} wybranych pozycji",
+    "clear_selection": "Usuń zaznaczenie",
+    "delete_db": "Usuń zaznaczone z bazy",
+    "players": "Odtwarzacze",
+    "play": "Graj",
+    "play_on": "Odtwara na: {0}",
+    "play_now": "Odtwarzaj teraz",
+    "play_next": "Odtwarzaj później",
+    "add_queue": "Dodaj do kolejki",
+    "start_radio": "Włącz radio",
+    "queue_clear": "Usuń wszystko z kolejki",
+    "show_info": "Pokaż informacje",
+    "queue_next_items": "Kolejne pozycje",
+    "queue_previous_items": "Poprzednie utwory",
+    "queue_move_up": "Przesuń do góry",
+    "queue_move_down": "Przesuń na dół",
+    "queue_delete": "Usuń pozycje",
+    "queue_options": "Opcje kolejki",
+    "read_more": "czytaj więcej",
+    "stream_details": "Szczegóły przesyłu",
+    "shuffle": "Losowo",
+    "repeat": "Powtarzaj",
+    "volume_normalization": "Normalizacja głośności",
+    "volume_normalization_target": "{0} LUFS",
+    "crossfade": "Crossfade",
+    "crossfade_duration": "{0} sekund",
+    "crossfade_enabled": "Crossfade aktywny",  
+    "stream_type": "Kodek/typ do użycia w strumieniu audio do odtwarzacza",
+    "announce_volume_increase": "Względny wzrost głośności ogłoszeń",
+    "max_sample_rate": "Maksymalna częstotliwość próbkowania przesyłana do odtwarzacza",
+    "metadata_mode": {
+       "title": "Tryb metadanych ICY",
+       "disabled": "Wyłączone: Nie zgłaszaj odtwarzaczowi obsługi metadanych ICY",
+       "default": "Wysyłaj metadane ICY, jeśli odtwarzacz o to poprosi/obsługuje z domyślnym (dużym) rozmiarem",
+       "legacy": "Wysyłaj metadane ICY, jeśli  odtwarzacz o to poprosi/obsługuje ze starszym (bardzo małym) rozmiarem"
+    },
+    "state": {
+      "playing": "odtwarza",
+      "idle": "idle",
+      "paused": "zatrzymany",
+      "off": "wyłaczony"
+    },
+    "repeatmode": {
+      "off": "Powtarzanie wyłączone",
+      "one": "Powtarzanie pojedyńczego utworu",
+      "all": "Powtarzanie całej kolejki"
+    },
+    "crossfademode": {
+      "disabled": "Crossfade nie aktywny",
+      "strict": "Strict: nie używaj Crossfade dla utworów z tego samego albumu lub o różnej częstotliwości próbkowania",
+      "smart": "Smart: używaj Crossfade, gdy to możliwe (bez próbkowania w dół)",
+      "always": "używaj Crossfade zawsze (ponownie próbkuje dźwięk do stałej szybkości)"
+    },
+    "sort": {
+        "sort_name": "Alfabetycznie",
+        "sort_name DESC": "Alfabetycznie (Z-A)",
+        "sort_artist": "Artysci",
+        "sort_album": "Albumy",
+        "year": "Rok wydania",
+        "position": "Pozycjan",
+        "track_number": "NUmer albumu",
+        "timestamp DESC": "Najnowsze dodane",
+        "duration": "Czas",
+        "provider": "Dostawca"
+      },
+    "on": "Właczony",
+    "off": "Wyłączony",
+    "dark_mode": "Tryb ciemnny",
+    "jobs": "Zadania w tle",
+    "jobs_running": "Jest {0} uruchomionych zadań.",
+    "actions": "Akcje",
+    "no_content": "Nie znaleziono pozycji.",
+    "no_content_sync_running": "Pozycje jeszcze nie dostępne. Proszę poczekaj na synchnronizację biblioteki.",
+    "details": "Szczegóły",
+    "explicit": "Explicit",
+    "providers": {
+      "spotify": "Spotify",
+      "qobuz": "Qobuz",
+      "file": "System plików",
+      "tunein": "Tune-in",
+      "ytmusic": "Youtube Music"
+    },
+  
+  "goto_artist": "Idź do artysty {0}",
+  "goto_album": "Idź do albumu {0}",
+  "show_select_boxes": "Pokaż wybrane boxes",
+  "perform_action": "Wykonaj akcje na {0} elementach",
+  "album_type": {
+    "unknown": "Nieznany typ albumu",
+    "album": "Album",
+    "single": "Singiel",
+    "compilation": "Kompilacja",
+    "ep": "EP"
+  }Ten dostawca jest połączony z aktualnymi szczegółami przedmiotu,
+  "tooltip": {
+    "explicit": "Explicit",
+    "library": "Przełącz między ulubionymi a wszystkimi",
+    "filter_library": "Przełącz między ulubionymi a wszystkimi filter",
+    "sort_options": "Opcje sortowania",
+    "toggle_view_mode": "Przełacz między widokiem listy a miniaturek",
+    "search": "Pokaż/ukryj dane wyszukiwania",
+    "refresh": "Odśwież listę",
+    "refresh_new_content": "Nowe zawartość jest dostępna, kliknij aby odświeżyć listę",
+    "select_items": "Wybierz wiele elementów",
+    "linked": "Ten dostawca jest połączony z aktualnymi szczegółami przedmiotu",
+    "album_artist_filter": "Przełącz filtr wykonawcy albumu"
   },
-  "repeatmode": {
-    "off": "Powtarzanie wyłączone",
-    "one": "Powtarzanie pojedyńczego utworu",
-    "all": "Powtarzanie całej kolejki"
-  },
-  "crossfademode": {
-    "disabled": "Crossfade nie aktywny",
-    "strict": "Strict: Do not crossfade tracks of same album or different sample rate",
-    "smart": "Smart: Crossfade tracks when possible (without downsampling)",
-    "always": "Crossfade all tracks (resamples all audio to fixed rate)"
-  },
-  "on": "On",
-  "off": "Off",
-  "dark_mode": "Tryb ciemnny",
-  "jobs": "Zadania w tle",
-  "jobs_running": "Jest {0} uruchomionych zadań.",
-  "actions": "Akcje",
-  "no_content": "Nie znaleziono pozycji.",
-  "no_content_sync_running": "Pozycje jeszcze nie dostępne. Proszę poczekaj na synchnronizację biblioteki.",
-  "details": "Szczegóły",
-  "explicit": "Explicit",
-  "providers": {
-    "spotify": "Spotify",
-    "qobuz": "Qobuz",
-    "file": "System plików",
-    "tunein": "Tune-in"
-  }
+  "create_playlist": "Utwórz nową playlistę na {0}"
 }
