adopt latest upstream frontend changes

--- a/custom_components/mass/translations/frontend/en.json
+++ b/custom_components/mass/translations/frontend/en.json
@@ -45,6 +45,8 @@
   "play_on": "Play on: {0}",
   "play_now": "Play Now",
   "play_next": "Play Next",
+  "play_playlist_from": "Play Playlist from here",
+  "play_album_from": "Play Album from here",
   "play_radio": "Start Radio",
   "add_queue": "Add to Queue",
   "start_radio": "Start Radio",
