--- a/custom_components/mass/translations/frontend/en.json
+++ b/custom_components/mass/translations/frontend/en.json
@@ -63,9 +63,11 @@
   "shuffle": "Shuffle",
   "repeat": "Repeat",
   "volume_normalization": "Volume normalization",
-  "volume_normalization_target": "{0} LUFS",
+  "volume_normalization_target": "Volume normalization target volume",
+  "volume_normalization_lufs": "{0} LUFS",
   "crossfade": "Crossfade",
-  "crossfade_duration": "{0} seconds",
+  "crossfade_duration": "Crossfade duration",
+  "crossfade_seconds": "{0} seconds",
   "crossfade_enabled": "Crossfade is enabled",
   "stream_type": "Codec/type to use for the audio stream to the player",
   "announce_volume_increase": "Relative volume increase for announcements",
