--- a/custom_components/mass/translations/frontend/es.json
+++ b/custom_components/mass/translations/frontend/es.json
@@ -60,9 +60,9 @@
   "shuffle": "Aleatorio",
   "repeat": "Repetir",
   "volume_normalization": "Normalización de volumen",
-  "volume_normalization_target": "{0} LUFS",
+  "volume_normalization_lufs": "{0} LUFS",
   "crossfade": "Crossfade",
-  "crossfade_duration": "{0} segundos",
+  "crossfade_seconds": "{0} segundos",
   "crossfade_enabled": "Crossfade esta habilitado",
   "stream_type": "Codec/tipo para usar en el audio stream hacia el reproductor",
   "announce_volume_increase": "Aumento relativo del volumen para los avisos",
