--- a/custom_components/mass/translations/frontend/fr.json
+++ b/custom_components/mass/translations/frontend/fr.json
@@ -60,9 +60,9 @@
   "shuffle": "Mélanger",
   "repeat": "Répéter",
   "volume_normalization": "Normalisation des volumes",
-  "volume_normalization_target": "{0} LUFS",
+  "volume_normalization_lufs": "{0} LUFS",
   "crossfade": "Fondu enchaîné",
-  "crossfade_duration": "{0} secondes",
+  "crossfade_seconds": "{0} secondes",
   "crossfade_enabled": "Fondu enchaîné activé",
   "stream_type": "Codec/type à utiliser pour le flux audio vers le lecteur",
   "announce_volume_increase": "Augmentation relative du volume des annonces",
