--- a/custom_components/mass/translations/frontend/nl.json
+++ b/custom_components/mass/translations/frontend/nl.json
@@ -69,9 +69,11 @@
   "shuffle": "Shuffle",
   "repeat": "Repeat",
   "volume_normalization": "Volume normalisatie",
-  "volume_normalization_target": "{0} LUFS",
+  "volume_normalization_target": "Volume normalisatie doel volume",
+  "volume_normalization_lufs": "{0} LUFS",
   "crossfade": "Crossfade modus",
-  "crossfade_duration": "{0} seconden",
+  "crossfade_duration": "Duur van de crossfade",
+  "crossfade_seconds": "{0} seconden",
   "crossfade_enabled": "Crossfade is ingeschakeld",
   "stream_type": "Codec die gebruikt moet worden voor de audiostreaam naar de player",
   "announce_volume_increase": "Relatieve volume verhoging bij afspelen van announcements",
