--- a/custom_components/mass/translations/frontend/pl.json
+++ b/custom_components/mass/translations/frontend/pl.json
@@ -60,9 +60,9 @@
   "shuffle": "Losowo",
   "repeat": "Powtarzaj",
   "volume_normalization": "Normalizacja głośności",
-  "volume_normalization_target": "{0} LUFS",
+  "volume_normalization_lufs": "{0} LUFS",
   "crossfade": "Crossfade",
-  "crossfade_duration": "{0} sekund",
+  "crossfade_seconds": "{0} sekund",
   "crossfade_enabled": "Crossfade aktywny",
   "stream_type": "Kodek/typ do użycia w strumieniu audio do odtwarzacza",
   "announce_volume_increase": "Względny wzrost głośności ogłoszeń",
