Update en.json add enqueue options (#1595)
* Update en.json add enqueue options

* Update en.json

--- a/custom_components/mass/translations/en.json
+++ b/custom_components/mass/translations/en.json
@@ -73,7 +73,7 @@
         },
         "enqueue": {
           "name": "Enqueue",
-          "description": "If the content should be played now or be added to the queue."
+          "description": "If the content should be played now or be added to the queue. Options are: play, replace, next, replace_next, add"
         },
         "announce": {
           "name": "Announce",
